--- a/solution.html
+++ b/solution.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="solution.css">
+	<link rel="stylesheet" href="css/solution.css">
 	<title>Document</title>
 </head>
 <body>
